<resources>
    <string name="app_name">Scientific Calculator Pro</string>
    <string name="action_settings">Settings</string>
    <string name="button_eight">8</string>
    <string name="btn_8">(</string>
    <string name="btn_parenthesis_up">(</string>
    <string name="btn_parenthesis_down">)</string>
    <string name="btn_dot">AC</string>
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_divide">÷</string>
    <string name="btn_seven">7</string>
    <string name="btn_nine">9</string>
    <string name="btn_plus">+</string>
    <string name="button_root">√</string>
    <string name="button_dot">.</string>
    <string name="button_8">8</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
</resources>
