<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/dim_foreground_material_dark">

    <TextView
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:id="@+id/calcView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/bright_foreground_disabled_material_dark"
        android:textSize="50sp"
        android:textColor="#000000"
        android:cursorVisible="true"
        android:scrollbars="vertical"
        android:lines="1"
        android:visibility="visible"
        android:textStyle="normal"
        android:singleLine="true" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@id/calcView"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calcView"
                >

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:useDefaultMargins="true"
                    android:layout_below="@+id/calcView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_parenthesis_up"
                        android:id="@+id/Pa"
                        android:layout_row="0"
                        android:layout_column="0"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_parenthesis_down"
                        android:id="@+id/buttonPb"
                        android:layout_row="0"
                        android:layout_column="1"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/button_dot"
                        android:id="@+id/buttonDot"
                        android:layout_row="0"
                        android:layout_column="2"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_dot"
                        android:id="@+id/buttonAC"
                        android:layout_row="0"
                        android:layout_column="3"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sin"
                        android:id="@+id/buttonSin"
                        android:layout_row="2"
                        android:layout_column="0"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_cos"
                        android:id="@+id/buttonCos"
                        android:layout_row="2"
                        android:layout_column="1"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tan"
                        android:id="@+id/buttonTan"
                        android:layout_row="2"
                        android:layout_column="2"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_divide"
                        android:id="@+id/buttonDiv"
                        android:layout_row="2"
                        android:layout_column="3"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="#000000" />

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="^"
                        android:id="@+id/buttonPow"
                        android:layout_row="0"
                        android:layout_column="4"
                        android:textColor="#000000" />
                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="Ln"
                        android:id="@+id/buttonLn"
                        android:layout_row="2"
                        android:layout_column="4"
                        android:textColor="#000000" />
                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="Log"
                        android:id="@+id/buttonLog"
                        android:layout_row="2"
                        android:layout_column="5"
                        android:textColor="#000000" />
                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="!"
                        android:id="@+id/buttonFact"
                        android:layout_row="0"
                        android:layout_column="5"
                        android:textColor="#000000" />
                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="nCr"
                        android:id="@+id/buttonNCR"
                        android:layout_row="0"
                        android:layout_column="6"
                        android:textColor="#000000" />
                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:text="nPr"
                        android:id="@+id/buttonNPR"
                        android:layout_row="2"
                        android:layout_column="6"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/mainView"
                        android:layout_row="0"
                        android:layout_column="5"
                        android:visibility="invisible"
                        />
                </GridLayout>

            </LinearLayout>

        </ScrollView>

    </HorizontalScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:useDefaultMargins="true"
        >

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="7"
            android:id="@+id/button7"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="8"
            android:id="@+id/button8"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="9"
            android:id="@+id/button9"
            android:layout_row="0"
            android:layout_column="2"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="x"
            android:id="@+id/buttonMul"
            android:layout_row="0"
            android:layout_column="3"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="4"
            android:id="@+id/button4"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="5"
            android:id="@+id/button5"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="6"
            android:id="@+id/button6"
            android:layout_row="1"
            android:layout_column="2"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/buttonMinus"
            android:layout_row="1"
            android:layout_column="3"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/button1"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="2"
            android:id="@+id/button2"
            android:layout_row="2"
            android:layout_column="1"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="3"
            android:id="@+id/button3"
            android:layout_row="2"
            android:layout_column="2"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/buttonPlus"
            android:layout_row="2"
            android:layout_column="3"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="--"
            android:id="@+id/buttonRoot"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="/"
            android:id="@+id/buttonDiv"
            android:layout_row="3"
            android:layout_column="1"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/buttonZero"
            android:layout_row="3"
            android:layout_column="2"
            android:textColor="#000000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="="
            android:id="@+id/buttonequ"
            android:layout_row="3"
            android:layout_column="3"
            android:textColor="#000000" />

    </GridLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ansView"
        android:layout_above="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="number|numberDecimal|numberSigned"
        android:lines="1"
        android:maxLines="1"
        android:numeric="integer|signed|decimal"
        android:singleLine="true"
        android:textColor="#891a3a65"
        android:textStyle="bold"
        android:visibility="visible" />


</RelativeLayout>
